--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <title>Trevin Shu | Portfolio</title>
     <link rel="shortcut icon" href="img/logo.webp" type="image/x-icon" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <script src="js/script.js" type="module" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <img src="img/logo.webp" alt="site logo" width="100px" />
+        <ul id="menu" class="menu">
+          <li>About Me</li>
+          <li>Education</li>
+          <li>Skills</li>
+          <li>Projects</li>
+          <button class="contactBtn">Contact Me</button>
+        </ul>
+        <button id="burgerBtn" class="burgerBtn"><i class="fa-solid fa-bars"></i></button>
+      </nav>
+      <div class="jumbotron">
+        <h1>Hi, my name is <span>Trevin</span>. <i class="em em-wave animate__animated animate__wobble animate__infinite infinite" aria-role="presentation" aria-label="WAVING HAND SIGN"></i></h1>
+        <p>I am a <span>web developer</span>.</p>
+        <button disabled class="animate__animated animate__infinite infinite animate__pulse"><i class="fa-solid fa-arrow-down"></i></button>
+      </div>
+    </header>
+    <main class="container">
+      <section class="aboutMeContainer">
+        <h2>About Me:</h2>
+        <div class="aboutMeContent">
+          <img src="img/profilepic.webp" alt="" height="200px" />
+          <p>
+            I am a Front-End Web Developer based in Edmonton, Alberta. I am passionate about Web Development and delivering feature rich web applications that are responsive, asethetically pleasing
+            and compliant with the latest accessability standards.
+          </p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
