--- a/src/success.html
+++ b/src/success.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Trevin Shu | Success Page</title>
+    <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Thank You</h1>
   </body>
 </html>
