--- a/src/index.html
+++ b/src/index.html
@@ -124,8 +124,8 @@
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
             </div>
             <div class="btnContainer">
-              <a href="https://trevins-movie-tv-app.netlify.app/" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
-              <a href="https://github.com/trevinshu/movietvapp" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
+              <a href="https://github.com/trevinshu/movietvapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
+              <a href="https://trevins-movie-tv-app.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
             </div>
           </div>
           <div class="recipeAppContainer">
@@ -144,8 +144,8 @@
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
             </div>
             <div class="btnContainer">
-              <a href="https://trevins-recipe-app.netlify.app/" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
-              <a href="https://github.com/trevinshu/recipeapp" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
+              <a href="https://github.com/trevinshu/recipeapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
+              <a href="https://trevins-recipe-app.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
             </div>
           </div>
           <div class="weatherAppContainer">
@@ -162,8 +162,8 @@
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
             </div>
             <div class="btnContainer">
-              <a href="https://trevins-weather-app.netlify.app/" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
-              <a href="https://github.com/trevinshu/weatherapp" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
+              <a href="https://github.com/trevinshu/weatherapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
+              <a href="https://trevins-weather-app.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
             </div>
           </div>
         </div>
