--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
       <nav>
         <img src="img/logo.webp" alt="site logo" width="100px" />
         <ul id="menu" class="menu">
-          <li><a href="#aboutMe">About Me</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <a href="#aboutMe">About Me</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
           <a href="#contactMe" class="contactBtn"> Contact Me</a>
         </ul>
         <button id="burgerBtn" class="burgerBtn"><i class="fa-solid fa-bars"></i></button>
