added optimized site logo and project screenshot images

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
   <body>
     <header>
       <nav>
-        <img src="img/logo.webp" alt="site logo" width="100px" />
+        <picture>
+          <source srcset="img/logo.webp">
+          <img src="img/logo.jpg" alt="Site Logo"> 
+        </picture>
         <ul id="menu" class="menu">
           <a href="#aboutMe">About Me</a>
           <a href="#skills">Skills</a>
@@ -107,7 +110,10 @@
         <h2 class="projectHeading">Projects:</h2>
         <div class="projectsContainer">
           <div class="recipeAppContainer">
-            <img src="img/movies-tv-app.png" alt="Movie App Mockup" width="500px" />
+            <picture>
+              <source srcset="img/movies-tv-app.webp">
+              <img src="img/movies-tv-app.jpg" alt="Screenshot of the Movie App"> 
+            </picture>
             <h2>Movie/TV App</h2>
             <h4>Description:</h4>
             <p>
@@ -129,7 +135,10 @@
             </div>
           </div>
           <div class="recipeAppContainer">
-            <img src="img/recipeapp.png" alt="Recipe App Mockup" width="500px" />
+            <picture>
+              <source srcset="img/recipeapp.webp">
+              <img src="img/recipeapp.jpg" alt="Screenshot of the Recipe App"> 
+            </picture>
             <h2>Recipe App</h4>
             <h4>Description:</h4>
             <p>
@@ -149,7 +158,10 @@
             </div>
           </div>
           <div class="weatherAppContainer">
-            <img src="img/weatherapp.png" alt="Weather App Mockup" width="500px" />
+            <picture>
+              <source srcset="img/weatherapp.webp">
+              <img src="img/weatherapp.jpg" alt="Screenshot of the Weather App"> 
+            </picture>
             <h2>Weather App</h2>
             <h4>Description:</h4>
             <p>I built this weather web application with HTML, SCSS & Vanilla JavaScript which allows an user to lookup the weather of a specific location. In order to 
