--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Trevin Shu | Portfolio</title>
     <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <script src="https://kit.fontawesome.com/b7615a6e5e.js" crossorigin="anonymous" defer></script>
     <script src="js/script.js" type="module" defer></script>
   </head>
   <body>
