added explicit height & width to images

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <nav>
         <picture>
           <source srcset="img/logo.webp">
-          <img src="img/logo.jpg" alt="Site Logo"> 
+          <img src="img/logo.jpg" alt="Site Logo" height="31px" width="100px"> 
         </picture>
         <ul id="menu" class="menu">
           <a href="#aboutMe">About Me</a>
@@ -113,7 +113,7 @@
           <div class="recipeAppContainer">
             <picture>
               <source srcset="img/movies-tv-app.webp">
-              <img src="img/movies-tv-app.jpg" alt="Screenshot of the Movie App"> 
+              <img src="img/movies-tv-app.jpg" alt="Screenshot of the Movie App" width="500px" height="243px"> 
             </picture>
             <h2>Movie/TV App</h2>
             <h4>Description:</h4>
@@ -138,7 +138,7 @@
           <div class="recipeAppContainer">
             <picture>
               <source srcset="img/recipeapp.webp">
-              <img src="img/recipeapp.jpg" alt="Screenshot of the Recipe App"> 
+              <img src="img/recipeapp.jpg" alt="Screenshot of the Recipe App" width="500px" height="243px"> 
             </picture>
             <h2>Recipe App</h4>
             <h4>Description:</h4>
@@ -161,7 +161,7 @@
           <div class="weatherAppContainer">
             <picture>
               <source srcset="img/weatherapp.webp">
-              <img src="img/weatherapp.jpg" alt="Screenshot of the Weather App"> 
+              <img src="img/weatherapp.jpg" alt="Screenshot of the Weather App" width="500px" height="243px"> 
             </picture>
             <h2>Weather App</h2>
             <h4>Description:</h4>
