changed from netlify to formspree form

--- a/src/index.html
+++ b/src/index.html
@@ -184,13 +184,12 @@
       <div class="contactContainer" id="contactMe">
         <h2>Contact Me:</h2>
         <div class="formContainer">
-          <form name="portfolio-contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" >
+          <form action="https://formspree.io/f/mvoleoqw" method="POST" >
             <div class="formGroup">
               <input type="text" placeholder="Name" name="name">
               <input type="email" name="email" placeholder="Email">
             </div>
             <textarea name="message" placeholder="Message"></textarea>
-            <div data-netlify-recaptcha="true" class="recaptchaContainer"></div>
             <div class="btnContainer">
               <button type="submit">Submit Message</button>
             </div>
