fixed weather app screenshot

--- a/src/index.html
+++ b/src/index.html
@@ -167,8 +167,9 @@
           </div>
           <div class="weatherAppContainer">
             <picture>
-              <source srcset="img/weatherapp.webp" type="image/webp">
-              <img src="img/weatherapp.jpg" alt="Screenshot of the Weather App" width="500px" height="243px" type="image/jpg"> 
+              <source srcset="img/weatherapp.webp" type="image/webp"> 
+              <source srcset="img/weatherapp.jpg"  type="image/jpeg">
+              <img src="img/weatherapp.jpg" alt="Screenshot of Weather Application">
             </picture>
             <h2>Weather App</h2>
             <h4>Description:</h4>
