fixed site logo image and project card images

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
     <header>
       <nav>
         <picture>
-          <source srcset="img/logo.webp">
-          <img src="img/logo.jpg" alt="Site Logo" height="31px" width="100px"> 
+          <source srcset="img/logo.webp" type="image/webp"> 
+          <source srcset="img/logo.jpg"  type="image/jpeg">
+          <img src="img/logo.jpg" alt="Site Logo" width="100px" height="31px">
         </picture>
         <ul id="menu" class="menu">
           <a href="#aboutMe">About Me</a>
@@ -119,8 +120,9 @@
         <div class="projectsContainer">
           <div class="recipeAppContainer">
             <picture>
-              <source srcset="img/movies-tv-app.webp">
-              <img src="img/movies-tv-app.jpg" alt="Screenshot of the Movie App" width="500px" height="243px"> 
+              <source srcset="img/movies-tv-app.webp" type="image/webp"> 
+              <source srcset="img/movies-tv-app.jpg"  type="image/jpeg">
+              <img src="img/movies-tv-app.jpg" alt="Screenshot of Movie/TV Application" width="500px" height="243px">
             </picture>
             <h2>Movie/TV App</h2>
             <h4>Description:</h4>
@@ -144,8 +146,9 @@
           </div>
           <div class="recipeAppContainer">
             <picture>
-              <source srcset="img/recipeapp.webp">
-              <img src="img/recipeapp.jpg" alt="Screenshot of the Recipe App" width="500px" height="243px"> 
+              <source srcset="img/recipeapp.webp" type="image/webp"> 
+              <source srcset="img/recipeapp.jpg"  type="image/jpeg">
+              <img src="img/weatherapp.jpg" alt="Screenshot of Recipe Application" width="500px" height="243px">
             </picture>
             <h2>Recipe App</h4>
             <h4>Description:</h4>
