changed site logo from jpg to png for transperency

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <picture>
           <source srcset="img/logo.webp" type="image/webp"> 
           <source srcset="img/logo.jpg"  type="image/jpeg">
-          <img src="img/logo.jpg" alt="Site Logo" width="100px" height="31px">
+          <img src="img/logo.png" alt="Site Logo" width="100px" height="31px">
         </picture>
         <ul id="menu" class="menu">
           <a href="#aboutMe">About Me</a>
