fixed incorrect file name in logo source tag

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <nav>
         <picture>
           <source srcset="img/logo.webp" type="image/webp"> 
-          <source srcset="img/logo.jpg"  type="image/jpeg">
+          <source srcset="img/logo.png"  type="image/jpeg">
           <img src="img/logo.png" alt="Site Logo" width="100px" height="31px">
         </picture>
         <ul id="menu" class="menu">
