fixed grid layout

--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,9 @@
         <section class="aboutMeContainer">
           <div class="imgContainer">
             <picture>
-              <source media="(max-width: 899px)" srcset="img/profilepic-small.webp" type="image/webp">
               <source media="(min-width: 900px)" srcset="img/profilepic-large.webp" type="image/webp">
-              <source media="(max-width: 899px)" srcset="img/profilepic-small.jpg" type="image/jpeg">
               <source media="(min-width: 900px)" srcset="img/profilepic-large.jpg" type="image/jpeg">
-              <img src="img/profilepic-large.jpg" alt="something" max-height="850px" max-width="686px">
+              <img src="img/profilepic-large.jpg" alt="something" height="850px" width="686px">
             </picture>
           </div>
           <div class="aboutMeContent">
