altered footer added footer logo

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <nav>
         <picture>
           <source srcset="img/logo.webp" type="image/webp"> 
-          <source srcset="img/logo.png"  type="image/jpeg">
+          <source srcset="img/logo.png"  type="image/png">
           <img src="img/logo.png" alt="Site Logo" width="100px" height="31px">
         </picture>
         <ul id="menu" class="menu">
@@ -209,15 +209,20 @@
       </div>
     </main>
    <footer class="footerContainer">
+    <picture>
+      <source srcset="img/footer-logo.webp" type="image/webp"> 
+      <source srcset="img/footer-logo.png"  type="image/png">
+      <img src="img/footer-logo.png" alt="Site Logo" width="100px" height="33px">
+    </picture>
+    <div class="copyrightInfo">
+      <p>Designed & Coded by Trevin Shu. &copy;2022</p>
+    </div>
     <div class="socialLinks">
       <ul>
         <a href="mailto:trevinshu2008@gmail.com"><i class="fa-solid fa-envelope"></i></a>
         <a href="https://www.linkedin.com/in/trevin-shu/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/trevinshu" target="_blank"><i class="fa-brands fa-github"></i></a>
       </ul>
-    </div>
-    <div class="copyrightInfo">
-      <p>Designed & Coded by Trevin Shu. &copy;2022</p>
     </div>
    </footer>
   </body>
