lowered font and I added an additional project

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,32 @@
               <a href="https://trevins-weather-app.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
             </div>
           </div>
+
+          <div class="eswAppContainer">
+            <picture>
+              <source srcset="img/esw-reporting-portal-screenshot.webp" type="image/webp"> 
+              <source srcset="img/esw-reporting-portal-screenshot.jpg"  type="image/jpeg">
+              <img src="img/esw-reporting-portal-screenshot.jpg" alt="Screenshot of ESW Reporting Portal">
+            </picture>
+            <h2>ESW Reporting Portal</h2>
+            <h4>Description:</h4>
+            <p>Myself and a team of 18 other developers made an internal reporting service for ESW I.T. Business Advisors. We worked with our client to design this single page web application using HTML, CSS & React. 
+              We worked in a small group of three to four developers on a component that was assigned to us which we later to the application after it was completed & reviewed by our team lead. 
+              We utilized Trello to make board of tickets which kept track of what needed to done, has been completed & what needed a bit more attention. 
+              We also had weekly SCRUM meetings and daily standup sessions in order to make sure everyone was comfortable & on the same page.</p>
+            <h4>Built With:</h4>
+            <div class="builtWithContainer">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
+            </div>
+            <div class="btnContainer">
+              <a href="https://github.com/trevinshu/weatherapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
+              <a href="https://trevins-weather-app.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
+            </div>
+          </div>
         </div>
+        
       </div>
       <div class="contactContainer" id="contactMe">
         <h2>Contact Me:</h2>
