finished web portfolio final touches

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,6 @@
               <a href="https://trevins-weather-app.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
             </div>
           </div>
-
           <div class="eswAppContainer">
             <picture>
               <source srcset="img/esw-reporting-portal-screenshot.webp" type="image/webp"> 
@@ -202,16 +201,23 @@
             <p>Myself and a team of 18 other developers made an internal reporting service for ESW I.T. Business Advisors. We worked with our client to design this single page web application using HTML, CSS & React. 
               We worked in a small group of three to four developers on a component that was assigned to us which we later to the application after it was completed & reviewed by our team lead. 
               We utilized Trello to make board of tickets which kept track of what needed to done, has been completed & what needed a bit more attention. 
-              We also had weekly SCRUM meetings and daily standup sessions in order to make sure everyone was comfortable & on the same page.</p>
+              We also had weekly SCRUM meetings and daily standup sessions in order to make sure everyone was comfortable & on the same page.
+            </p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="75px" width="75px" />
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" height="75px" width="75px" />
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" height="75px" width="75px" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" height="75px" width="75px" />
+            </div>
+            <h4>Username/Password:</h4>
+            <div class="usernamePasswordContainer">
+              <p><b>Username:</b> admin01</p>
+              <p><b>Password:</b> eswcapstoneapp</p>
+              <p><span>Note: Data/Functionality is limited due to privacy concerns.</span></p>
             </div>
             <div class="btnContainer">
-              <a href="https://github.com/trevinshu/weatherapp" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
-              <a href="https://trevins-weather-app.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
+              <a href="https://github.com/Zachlson/ESW-Reporting-Portal-Scrubbed" target="_blank"><i class="fa-brands fa-github"></i> View on github</a>
+              <a href="https://main--capstone-demo.netlify.app/" target="_blank"><i class="fa-solid fa-globe"></i> view live</a>
             </div>
           </div>
         </div>
