added smooth scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
       </div>
     </header>
     <main class="container">
-      <div class="aboutMeMainContainer" id="aboutMe">
+      <div class="aboutMeMainContainer">
         <h2>About Me:</h2>
-        <section class="aboutMeContainer">
+        <section class="aboutMeContainer" id="aboutMe">
           <div class="imgContainer">
             <picture>
               <source media="(max-width: 899px)" srcset="img/profilepic-small.webp" type="image/webp">
@@ -47,7 +47,7 @@
           </div>
           <div class="aboutMeContent">
             <p>
-              I am a <span>Frontend Web Developer</span> who recently graduated from NAIT (Northern Alberta Institute of Technology) with a
+              I am a <span>Web Developer</span> who recently graduated from NAIT (Northern Alberta Institute of Technology) with a
               <span>Diploma in Digital Media & IT specializing in Computer Software Development</span>. <br /><br />
               I am passionate about Web Development and I aim to deliver feature rich web applications that are aesthetically pleasing, responsive and compliant with the latest accessability
               standards.
@@ -58,9 +58,9 @@
           </div>
         </section>
       </div>
-      <div class="skillsMainContainer" id="skills">
+      <div class="skillsMainContainer">
         <h2>Skills/Tools:</h2>
-        <section class="skillsContainer">
+        <section class="skillsContainer" id="skills">
           <div class="htmlContainer">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg" height="100px" width="100px" />
             <h4>HTML</h4>
@@ -115,9 +115,9 @@
           </div>
         </section>
       </div>
-      <div class="mainProjectsContainer" id="projects">
+      <div class="mainProjectsContainer">
         <h2 class="projectHeading">Projects:</h2>
-        <div class="projectsContainer">
+        <div class="projectsContainer" id="projects">
           <div class="recipeAppContainer">
             <picture>
               <source srcset="img/movies-tv-app.webp" type="image/webp"> 
@@ -127,7 +127,7 @@
             <h2>Movie/TV App</h2>
             <h4>Description:</h4>
             <p>
-              I built this movie/tv show web application with HTML, SCSS & Vanilla JavaScript which allows an user to lookup information on tv shows & movies. In order to do this an user can use the 
+              I built this movie/tv show web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup information on tv shows & movies. In order to do this a user can use the 
               search input field to search for a specific movie/tv show they are looking for or they can select a movie/tv show from the pre-made categories that are displayed on the homepage when the page
               is loaded. In order to get and display this data I used TheMovieDB API. 
               <br><br>
@@ -153,7 +153,7 @@
             <h2>Recipe App</h4>
             <h4>Description:</h4>
             <p>
-              I built this recipe web application with HTML, SCSS & Vanilla JavaScript which allows an user to lookup recipes. A user can use the search input field to search for recipes 
+              I built this recipe web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup recipes. A user can use the search input field to search for recipes 
               that match or are related to what they entered into the search input field or they can select recipe from a list of food categories that are displayed on the homepage when the page is loaded. 
               I used the TheMealDB API to retrieve & display the data. 
             </p>
@@ -176,8 +176,8 @@
             </picture>
             <h2>Weather App</h2>
             <h4>Description:</h4>
-            <p>I built this weather web application with HTML, SCSS & Vanilla JavaScript which allows an user to lookup the weather of a specific location. In order to 
-              search the user has to enter the city & country in the appropriate input fields and hit search. The banner image will change based on the location the inputted so if an user searches Tokyo the banner image 
+            <p>I built this weather web application with HTML, SCSS & Vanilla JavaScript which allows a user to lookup the weather of a specific location. In order to 
+              search the user has to enter the city & country in the appropriate input fields and hit search. The banner image will change based on the location the inputted so if a user searches Tokyo the banner image 
               will change to something related to Tokyo. Other features of this application are a toggle to switch from Celsius to Fahrenheit and vise versa.</p>
             <h4>Built With:</h4>
             <div class="builtWithContainer">
@@ -223,9 +223,9 @@
         </div>
         
       </div>
-      <div class="contactContainer" id="contactMe">
+      <div class="contactContainer">
         <h2>Contact Me:</h2>
-        <div class="formContainer">
+        <div class="formContainer" id="contactMe">
           <form action="https://formspree.io/f/mvoleoqw" method="POST" >
             <div class="formGroup">
               <input type="text" placeholder="Name" name="name">
